tests/bad/func_bad_arg_type.ae
/// fail: Argument type does not match function parameter type

def foo(x: i32) { }

def main() {
    foo(true)
}